fix z-index 99

--- a/components/compose/alertBox/index.module.css
+++ b/components/compose/alertBox/index.module.css
@@ -7,7 +7,7 @@
     bottom: 0px;
     background: rgba(196, 196, 196, 0.9);
     right: 0px;
-    z-index: 1;
+    z-index: 99;
 }
 
 .box {
